--- a/.github/workflows/npm-upload.yml
+++ b/.github/workflows/npm-upload.yml
@@ -88,16 +88,11 @@ jobs:
           cd "${{ steps.pkg.outputs.package_dir }}"
           npm ci || npm install
           npm pack
+        
+
           PACKAGE_TGZ=$(ls *.tgz | head -n 1)
-          jf npm publish "${{ inputs['jfrog-npm-repository'] }}" \
-          --server-id=artifactory-server \
-          --build-name="${{ inputs['build-name'] }}" \
-           --build-number="${{ inputs['build-number'] }}"
-
-
-          #PACKAGE_TGZ=$(ls *.tgz | head -n 1)
-         # jf rt upload "$PACKAGE_TGZ" "${{ inputs.jfrog-npm-repository }}" \
-            #--flat=false \
-            #--server-id=artifactory-server \
-           # --build-name="${{ inputs.build-name }}" \
-            #--build-number="${{ inputs.build-number }}"
+          jf rt upload "$PACKAGE_TGZ" "${{ inputs.jfrog-npm-repository }}" \
+            --flat=false \
+            --server-id=artifactory-server \
+            --build-name="${{ inputs.build-name }}" \
+            --build-number="${{ inputs.build-number }}"
