--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,6 +24,9 @@ jobs:
         uses: jfrog/setup-jfrog-cli@v4
         env:
           JFROG_ACCESS_TOKEN: ${{ secrets.JFROG_ACCESS_TOKEN }}
+      - name: Checkout repository (for Git metadata)
+        uses: actions/checkout@v5
+   
 
       - name: Configure JFrog CLI
         env:
