--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -40,11 +40,12 @@ jobs:
       - name: Publish build info
         if: ${{ inputs.build-name != '' && inputs.build-number != '' }}
         run: |
-           jf rt bag "${{ inputs['build-name'] }}" "${{ inputs['build-number'] }}" .
-           jf rt bce "${{ inputs['build-name'] }}" "${{ inputs['build-number'] }}"
-           jf rt bp "${{ inputs['build-name'] }}" "${{ inputs['build-number'] }}" --server-id=artifactory-server
+           #jf rt bag "${{ inputs['build-name'] }}" "${{ inputs['build-number'] }}" .
+           #jf rt bce "${{ inputs['build-name'] }}" "${{ inputs['build-number'] }}"
+           #jf rt bp "${{ inputs['build-name'] }}" "${{ inputs['build-number'] }}" --server-id=artifactory-server
+           #echo "Build info published for ${{ inputs.build-name }} #${{ inputs.build-number }}"
+           jf rt bce "${{ inputs.build-name }}" "${{ inputs.build-number }}"
+           jf rt bp "${{ inputs.build-name }}" "${{ inputs.build-number }}" \
+           --server-id=artifactory-server
            echo "Build info published for ${{ inputs.build-name }} #${{ inputs.build-number }}"
-          #jf rt bce "${{ inputs.build-name }}" "${{ inputs.build-number }}"
-          #jf rt bp "${{ inputs.build-name }}" "${{ inputs.build-number }}" \
-          # --server-id=artifactory-server
          
